# compress-gpt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
assets/: gen_webm.py
compress_gpt/: __init__.py  compress.py  utils.py
compress_gpt/langchain/: __init__.py  prompt.py
compress_gpt/prompts/: __init__.py  compare_prompts.py  compress_chunks.py  decompress.py  diff_prompts.py  fix.py  fix_json.py  identify_format.py  identify_static.py  output_parser.py
compress_gpt/tests/: test_compress.py
scripts/: release.sh
